Cambios value- button

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         </p>
 
         <div class="boton">
-         <a href="/index.html">Cerrar</a>
+         <a href="/index.html">Volver al juego</a>
         </div>
 
       </div>
