Agregar Favicon Aguaelulo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://use.typekit.net/kjo6zap.css">
     <link rel="stylesheet" href="https://use.typekit.net/kjo6zap.css">
+    <link rel="icon" href="img/logo-aguaelulo.png" type="img/x-icon">
   </head>
   <body>
     <section class="juego">
